5.1.10

NEW
    - Make lootframe moveable (if not hooked under mouse)

5.1.9

FIXES
    - Fix a error in ptBR and zhTW local

5.1.8

FIXES
    - Fix a position error with the MultiBarBottomRight

5.1.7

NEW
    - Added custom Loot frame
    - Added custom Gamemenu
    - Added custom Staticpopup
    - Added custom Ghost frame
    - Added some more custom frames like Dropdowns, etc.
    - Make XP-Bar as a module
    - Change range indicator for Multibars
    
MISCELLANEOUS
    - Tooltip now anchor to the bottom right of the Tooltip mover frame
    - Update locals (zhTW, ptBR)


5.1.6

MISCELLANEOUS
    - Disable toast messages
    - Change debuff position on target if target has no buffs


5.1.5

NEW
    - Added Welcome- and Changelog Page
    - Added Pixel Perfection Mode
    - Added Move HUD option for tooltips
    - Stancebuttons have own border
    - Temp weapon enchants are now shown as buff
    - Added option to set combpoints to the unitframe
    - Added SharedMedia support (Fonts and Textures)

FIXES
    - Update TOC for 8.2.5
    - Remove deprecated hook for guild microbutton
    - Fixed CN & TW font issues
    - GW2_UI works fine with dominos if our Actionsbars are disabled

MISCELLANEOUS
    - Stancebar shows the stancebutton if only one stance is known


5.1.4

FIXES
    - Fail silent for the LibACE check


5.1.3

FIXES
    - The GW2 micromenu bar will now style properly when ElvUI is installed


5.1.2
7
NEW
    - Bank now has a "default" container to be consistent with backpack view

FIXES
    - Change default bag, bank, and hero window positions to be on-screen with
      more resolutions (use /gw_win_reset to reset them to these defaults)


5.1.1

NEW
    - Add the /gw_win_reset slash command to reset bag/bank/hero positions

FIXES
    - Revert debug code showing default bags at the bank :) oops


5.1.0

NEW
    - Added itemlevel and itemborder quality to equipment selection
    - Overhaul bank & bags to fix a number of issues (#206, #188)