@@ -422,6 +422,7 @@ GW_CHANGELOGS = "\n\n5.1.9\n\n" .. GW_CHANGELOGS
 
 --VERSION 5.1.10
 GW_CHANGELOGS = "   - Make lootframe moveable (if not hooked under mouse)\n" .. GW_CHANGELOGS
+GW_CHANGELOGS = "   - Added a 'Skin'-Tab into settings\n" .. GW_CHANGELOGS
 GW_CHANGELOGS = "\nNEW\n" .. GW_CHANGELOGS
 GW_CHANGELOGS = "\n\n5.1.10\n\n" .. GW_CHANGELOGS
 
