@@ -829,6 +829,13 @@ local function LoadSettings()
     GwSettingsIndicatorsOptionsSub:SetTextColor(181 / 255, 160 / 255, 128 / 255)
     GwSettingsIndicatorsOptionsSub:SetText(GwLocalization["INDICATORS_DESC"])
 
+    GwSettingsGeneralSkinsOptionHeader:SetFont(DAMAGE_TEXT_FONT, 20)
+    GwSettingsGeneralSkinsOptionHeader:SetTextColor(255 / 255, 241 / 255, 209 / 255)
+    GwSettingsGeneralSkinsOptionHeader:SetText("General Skins")
+    GwSettingsGeneralSkinsOptionSub:SetFont(UNIT_NAME_FONT, 12)
+    GwSettingsGeneralSkinsOptionSub:SetTextColor(181 / 255, 160 / 255, 128 / 255)
+    GwSettingsGeneralSkinsOptionSub:SetText("Enable or disable the skins you need and don't need.")
+
     GwSettingsProfilesframeHeader:SetFont(DAMAGE_TEXT_FONT, 20)
     GwSettingsProfilesframeHeader:SetTextColor(255 / 255, 255 / 255, 255 / 255)
     GwSettingsProfilesframeHeader:SetText(GwLocalization["PROFILES_CAT_1"])
@@ -1503,6 +1510,19 @@ local function LoadSettings()
             {perSpec = true}
         )
     end
+
+    createCat("General Skins", "Enable and disable general skins", "GwSettingsGeneralSkinsOption", 6)
+
+    addOption("MainMenu", nil, "MAINMENU_SKIN_ENABLED", "GwSettingsGeneralSkinsOption")
+    addOption("Static Popup", nil, "STATICPOPUP_SKIN_ENABLED", "GwSettingsGeneralSkinsOption")
+    addOption("Battle.net Toast", nil, "BNTOASTFRAME_SKIN_ENABLED", "GwSettingsGeneralSkinsOption")
+    addOption("Ghost frame", nil, "GHOSTFRAME_SKIN_ENABLED", "GwSettingsGeneralSkinsOption")
+    addOption("Queuestatus frame", nil, "QUEUESTATUSFRAME_SKIN_ENABLED", "GwSettingsGeneralSkinsOption")
+    addOption("Deathrecap frame", nil, "DEATHRECAPFRAME_SKIN_ENABLED", "GwSettingsGeneralSkinsOption")
+    addOption("Drop-Down-List", nil, "DROPDOWNLIST_SKIN_ENABLED", "GwSettingsGeneralSkinsOption")
+    addOption("Drop-Down-Menu", nil, "DROPDOWNMENU_SKIN_ENABLED", "GwSettingsGeneralSkinsOption")
+    addOption("Gear Manager Dialog Popup", nil, "GEARMANAGERDIALOGPOPUP_SKIN_ENABLED", "GwSettingsGeneralSkinsOption")
+    addOption("LFG Dungeon Ready Status", nil, "LFGDUNGEONREADYSTATUS_SKIN_ENABLED", "GwSettingsGeneralSkinsOption")
 
     createCat(GwLocalization["PROFILES_CAT"], GwLocalization["PROFILES_TOOLTIP"], "GwSettingsProfilesframe", 5)
     _G["GwSettingsLabel4"].iconbg:SetTexture("Interface\\AddOns\\GW2_UI\\textures\\settingsiconbg-2.tga")
