@@ -268,6 +268,17 @@ GW_DEFAULT["INDICATOR_LEFT"] = 0
 GW_DEFAULT["INDICATOR_CENTER"] = 0
 GW_DEFAULT["INDICATOR_RIGHT"] = 0
 
+GW_DEFAULT["MAINMENU_SKIN_ENABLED"] = true
+GW_DEFAULT["STATICPOPUP_SKIN_ENABLED"] = true
+GW_DEFAULT["BNTOASTFRAME_SKIN_ENABLED"] = true
+GW_DEFAULT["GHOSTFRAME_SKIN_ENABLED"] = true
+GW_DEFAULT["QUEUESTATUSFRAME_SKIN_ENABLED"] = true
+GW_DEFAULT["DEATHRECAPFRAME_SKIN_ENABLED"] = true
+GW_DEFAULT["DROPDOWNLIST_SKIN_ENABLED"] = true
+GW_DEFAULT["DROPDOWNMENU_SKIN_ENABLED"] = true
+GW_DEFAULT["GEARMANAGERDIALOGPOPUP_SKIN_ENABLED"] = true
+GW_DEFAULT["LFGDUNGEONREADYSTATUS_SKIN_ENABLED"] = true
+
 --GW_DEFAULT["USE_BATTLEGROUND_HUD"] = false
 
 GW_DEFAULT["ACTIVE_PROFILE"] = nil
